[gd_scene load_steps=2 format=3 uid="uid://xd74jlc4lvwf"]

[ext_resource type="Script" uid="uid://3sy36whwr6tb" path="res://Scenes/wave_manager.gd" id="1_6x8f1"]

[node name="WaveManager" type="Node2D"]
script = ExtResource("1_6x8f1")

[node name="NewWaveSpawnTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="NewWaveSpawnTimer" to="." method="_on_new_wave_spawn_timer_timeout"]
